refactor: make exception immutable and modernise Stream.toList() usage Make RestaurantNotFoundException final and remove @Data in favour of @Getter so the id field cannot be mutated after construction. Replace Collectors.toList() with Stream.toList() in ApiErrorUtils to return an unmodifiable list using the Java 16+ API.